--- a/signupPage.html
+++ b/signupPage.html
@@ -73,8 +73,8 @@
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Sign Up</button>
         </form>
-        <!-- Redirect to loginPage.html when login link is clicked -->
-        <a href="loginPage.html" class="login-link">Already have an account? Login</a>
+        <!-- Redirect to index.html when login link is clicked -->
+        <a href="index.html" class="login-link">Already have an account? Login</a>
     </div>
 </body>
 </html>
